// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Default render 1`] = `
<p
  className=""
  role="text"
>
  default text
</p>
`;

exports[`Text H1 element 1`] = `
<h1
  className=""
  role="text"
>
  h1: The quick brown fox jumps over the lazy dog
</h1>
`;

exports[`Text H2 element 1`] = `
<h2
  className=""
  role="text"
>
  h2: The quick brown fox jumps over the lazy dog
</h2>
`;

exports[`Text H3 element 1`] = `
<h3
  className=""
  role="text"
>
  h3: The quick brown fox jumps over the lazy dog
</h3>
`;

exports[`Text H4 element 1`] = `
<h4
  className=""
  role="text"
>
  h4: The quick brown fox jumps over the lazy dog
</h4>
`;

exports[`Text H5 element 1`] = `
<h5
  className=""
  role="text"
>
  h5: The quick brown fox jumps over the lazy dog
</h5>
`;

exports[`Text H6 element 1`] = `
<h6
  className=""
  role="text"
>
  h6: The quick brown fox jumps over the lazy dog
</h6>
`;

exports[`Text body1 element 1`] = `
<p
  className=""
  role="text"
>
  body1: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text body2 element 1`] = `
<p
  className=""
  role="text"
>
  body2: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text bold transform 1`] = `
<p
  className=""
  role="text"
>
  bold: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text capitalized transform 1`] = `
<p
  className=""
  role="text"
>
  capitalized: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text caption element 1`] = `
<span
  className=""
  role="text"
>
  caption: The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Text centered transform 1`] = `
<p
  className=""
  role="text"
>
  centered: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text code element 1`] = `
<code
  className=""
  role="text"
>
  code: The quick brown fox jumps over the lazy dog
</code>
`;

exports[`Text danger color 1`] = `
Array [
  <h5
    className=""
    color="danger"
    role="text"
  >
    danger: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="danger"
    role="text"
  >
    danger: The quick brown fox jumps over the lazy dog
  </p>,
]
`;

exports[`Text disabled transform 1`] = `
<p
  className=""
  role="text"
>
  disabled: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text hero element 1`] = `
<h1
  className=""
  role="text"
>
  hero: The quick brown fox jumps over the lazy dog
</h1>
`;

exports[`Text info color 1`] = `
Array [
  <h5
    className=""
    color="info"
    role="text"
  >
    info: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="info"
    role="text"
  >
    info: The quick brown fox jumps over the lazy dog
  </p>,
]
`;

exports[`Text italicized transform 1`] = `
<p
  className=""
  role="text"
>
  italicized: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text lowercase transform 1`] = `
<p
  className=""
  role="text"
>
  lowercase: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text major color 1`] = `
Array [
  <h5
    className=""
    color="major"
    role="text"
  >
    major: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="major"
    role="text"
  >
    major: The quick brown fox jumps over the lazy dog
  </p>,
]
`;

exports[`Text minor color 1`] = `
Array [
  <h5
    className=""
    color="minor"
    role="text"
  >
    minor: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="minor"
    role="text"
  >
    minor: The quick brown fox jumps over the lazy dog
  </p>,
]
`;

exports[`Text neutral color 1`] = `
Array [
  <h5
    className=""
    color="neutral"
    role="text"
  >
    neutral: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="neutral"
    role="text"
  >
    neutral: The quick brown fox jumps over the lazy dog
  </p>,
]
`;

exports[`Text p element 1`] = `
<p
  className=""
  role="text"
>
  p: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text span element 1`] = `
<span
  className=""
  role="text"
>
  span: The quick brown fox jumps over the lazy dog
</span>
`;

exports[`Text stretched transform 1`] = `
<p
  className=""
  role="text"
>
  stretched: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text subtitle1 element 1`] = `
<h4
  className=""
  role="text"
>
  subtitle1: The quick brown fox jumps over the lazy dog
</h4>
`;

exports[`Text subtitle2 element 1`] = `
<h5
  className=""
  role="text"
>
  subtitle2: The quick brown fox jumps over the lazy dog
</h5>
`;

exports[`Text success color 1`] = `
Array [
  <h5
    className=""
    color="success"
    role="text"
  >
    success: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="success"
    role="text"
  >
    success: The quick brown fox jumps over the lazy dog
  </p>,
]
`;

exports[`Text title1 element 1`] = `
<h2
  className=""
  role="text"
>
  title1: The quick brown fox jumps over the lazy dog
</h2>
`;

exports[`Text title2 element 1`] = `
<h3
  className=""
  role="text"
>
  title2: The quick brown fox jumps over the lazy dog
</h3>
`;

exports[`Text truncated transform 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <p
    className=""
    role="text"
  >
    truncated: The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`Text underlined transform 1`] = `
<p
  className=""
  role="text"
>
  underlined: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text uppercase transform 1`] = `
<p
  className=""
  role="text"
>
  uppercase: The quick brown fox jumps over the lazy dog
</p>
`;

exports[`Text warning color 1`] = `
Array [
  <h5
    className=""
    color="warning"
    role="text"
  >
    warning: The quick brown fox jumps over the lazy dog
  </h5>,
  <p
    className=""
    color="warning"
    role="text"
  >
    warning: The quick brown fox jumps over the lazy dog
  </p>,
]
`;
